@@ -227,7 +227,7 @@ dnl DEFS HAVE_POLL, HAVE_RELIABLE_POLL
 CL_POLL
 dnl DEFS HAVE_SELECT, SELECT_WIDTH_T, SELECT_SET_T, SELECT_CONST, HAVE_RELIABLE_SELECT
 CL_SELECT
-AC_CHECK_FUNCS(usleep ualarm setitimer nice ftime)
+AC_CHECK_FUNCS(usleep ualarm setitimer nice ftime realpath)
 dnl DEFS HAVE_GETTIMEOFDAY, GETTIMEOFDAY_DOTS, GETTIMEOFDAY_TZP_T
 CL_GETTIMEOFDAY
 dnl DEFS HAVE_TIMES_CLOCK (only if no ftime())
